force-app/main/default/objects/Lead/fields/FEGLI_Code_Picklist__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Code_Picklist__c</fullName>
    <label>FEGLI Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEGLI_Code</valueSetName>
    </valueSet>
</CustomField>