force-app/main/default/objects/Lead/fields/FEGLI_Plan__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Plan__c</fullName>
    <label>FEGLI Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Option A</fullName>
            </value>
            <value>
                <fullName>Option B</fullName>
            </value>
            <value>
                <fullName>Option C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>