force-app/main/default/objects/Lead/fields/FEHB_PSHB__c.field-meta.xml
<CustomField>
    <fullName>FEHB_PSHB__c</fullName>
    <label>FEHB/PSHB</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>