force-app/main/default/objects/Lead/fields/FERS__c.field-meta.xml
<CustomField>
    <fullName>FERS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FERS</label>
    <type>Checkbox</type>
</CustomField>