force-app/main/default/objects/Lead/fields/FERS_Special_Supplement__c.field-meta.xml
<CustomField>
    <fullName>FERS_Special_Supplement__c</fullName>
    <formula>Predicted_Social_Security__c * (YOS_Special_Supplement__c / 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FERS Special Supplement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>