force-app/main/default/objects/Lead/fields/formula_401k_Tax__c.field-meta.xml
<CustomField>
    <fullName>formula_401k_Tax__c</fullName>
    <formula>Pg7Rw6__c + Pg7Rw7__c + Pg7Rw8__c + Pg7Rw9__c + Pg7Rw10__c + Pg7Rw6_Spouse__c + Pg7Rw7_Spouse__c + Pg7Rw8_Spouse__c + Pg7Rw9_Spouse__c + Pg7Rw10_Spouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula_401k_Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>