force-app/main/default/objects/Lead/fields/formula_401k_TaxFREE__c.field-meta.xml
<CustomField>
    <fullName>formula_401k_TaxFREE__c</fullName>
    <formula>Pg8Rw9__c + Pg8Rw9_Spouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula_401k_TaxFREE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>