force-app/main/default/objects/Lead/fields/formula_addlInsurance__c.field-meta.xml
<CustomField>
    <fullName>formula_addlInsurance__c</fullName>
    <formula>Pg10Rw20__c + Pg10Rw20_Spouse__c + Pg9Rw12__c + Pg9Rw12_Spouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula_addlInsurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>