force-app/main/default/objects/Lead/fields/formula_basePay__c.field-meta.xml
<CustomField>
    <fullName>formula_basePay__c</fullName>
    <formula>MCEILING(Base_Salary__c * 0.001 ) / 0.001</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula_basePay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>