force-app/main/default/objects/Lead/fields/formula_totalExpenses_Spouse__c.field-meta.xml
<CustomField>
    <fullName>formula_totalExpenses_Spouse__c</fullName>
    <formula>Pg9Rw01_Spouse__c + 
Pg9Rw02_Spouse__c + 
Pg9Rw03_Spouse__c + 
Pg9Rw04_Spouse__c + 
Pg9Rw05_Spouse__c + 
Pg9Rw06_Spouse__c + 
Pg9Rw07_Spouse__c + 
Pg9Rw08_Spouse__c + 
Pg9Rw09_Spouse__c + 
Pg9Rw10_Spouse__c + 
Pg9Rw11_Spouse__c + 
Pg9Rw18_Spouse__c + 
Pg9Rw19_Spouse__c + 
Pg9Rw20_Spouse__c + 
Pg9Rw21_Spouse__c + 
Pg10Rw01_Spouse__c + 
Pg10Rw02_Spouse__c + 
Pg10Rw03_Spouse__c + 
Pg10Rw04_Spouse__c + 
Pg10Rw05_Spouse__c + 
Pg10Rw06_Spouse__c + 
Pg10Rw07_Spouse__c + 
Pg10Rw08_Spouse__c + 
Pg10Rw09_Spouse__c + 
Pg10Rw10_Spouse__c + 
Pg10Rw11_Spouse__c + 
Pg10Rw12_Spouse__c + 
Pg10Rw13_Spouse__c + 
Pg10Rw14_Spouse__c + 
Pg10Rw15_Spouse__c + 
Pg10Rw16_Spouse__c + 
Pg10Rw17_Spouse__c + 
Pg10Rw18_Spouse__c + 
Pg10Rw19_Spouse__c + 
Pg10Rw21_Spouse__c + 
Pg10Rw22_Spouse__c + 
Pg10Rw23_Spouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula_totalExpenses_Spouse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>