force-app/main/default/objects/Lead/fields/formula_totalHealth__c.field-meta.xml
<CustomField>
    <fullName>formula_totalHealth__c</fullName>
    <formula>Pg9Rw13__c + Pg9Rw14__c + Pg9Rw15__c + Pg9Rw16__c + Pg9Rw17__c + Pg9Rw13_Spouse__c + Pg9Rw14_Spouse__c + Pg9Rw15_Spouse__c + Pg9Rw16_Spouse__c + Pg9Rw17_Spouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula_totalHealth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>