force-app/main/default/objects/Lead/fields/GAP_Difference__c.field-meta.xml
<CustomField>
    <fullName>GAP_Difference__c</fullName>
    <formula>subTotal__c - currentNET__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GAP_Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>