force-app/main/default/objects/Lead/fields/hiddenExtraBenefitformula__c.field-meta.xml
<CustomField>
    <fullName>hiddenExtraBenefitformula__c</fullName>
    <formula>(formula_basePay__c + 2000) * AgeFactorformula_Basic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenExtraBenefitformula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>