force-app/main/default/objects/Lead/fields/hiddenTaxFormula1__c.field-meta.xml
<CustomField>
    <fullName>hiddenTaxFormula1__c</fullName>
    <formula>if( 
   Predicted_Social_Security__c  != 0 &amp;&amp;

ISPICKVAL( taxRate1_Picklist__c , &quot;01%&quot;),  
    0.01 * Predicted_Social_Security__c,
if(
    
ISPICKVAL( taxRate1_Picklist__c , &quot;02%&quot;), 
    0.02 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;03%&quot;), 
    0.03 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;04%&quot;), 
    0.04 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;05%&quot;), 
    0.05 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;06%&quot;), 
    0.06 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;07%&quot;), 
    0.07 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;08%&quot;), 
    0.08 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;09%&quot;), 
    0.09 * Predicted_Social_Security__c,
if(
ISPICKVAL( taxRate1_Picklist__c , &quot;10%&quot;), 
    0.10 * Predicted_Social_Security__c,

0
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenTaxFormula1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>