force-app/main/default/objects/Lead/fields/hiddenTaxFormula2__c.field-meta.xml
<CustomField>
    <fullName>hiddenTaxFormula2__c</fullName>
    <formula>if( 
Spouse_Social_Security__c != 0 &amp;&amp;

ISPICKVAL( taxRate2_Picklist__c , &quot;01%&quot;),
0.01 * Spouse_Social_Security__c,
if(

ISPICKVAL( taxRate2_Picklist__c , &quot;02%&quot;),
0.02 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;03%&quot;),
0.03 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;04%&quot;),
0.04 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;05%&quot;),
0.05 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;06%&quot;),
0.06 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;07%&quot;),
0.07 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;08%&quot;),
0.08 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;09%&quot;),
0.09 * Spouse_Social_Security__c,
if(
ISPICKVAL( taxRate2_Picklist__c , &quot;10%&quot;),
0.10 * Spouse_Social_Security__c,

0
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenTaxFormula2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>