force-app/main/default/objects/Lead/fields/hiddenTaxFormula3__c.field-meta.xml
<CustomField>
    <fullName>hiddenTaxFormula3__c</fullName>
    <formula>if(
Predicted_Pension__c != 0 &amp;&amp;

ISPICKVAL( taxRate3_Picklist__c , &quot;10%&quot;),
0.10 * Predicted_Pension__c,
if(

ISPICKVAL( taxRate3_Picklist__c , &quot;12%&quot;),
0.12 * Predicted_Pension__c,
if(
ISPICKVAL( taxRate3_Picklist__c , &quot;15%&quot;),
0.15 * Predicted_Pension__c,
if(
ISPICKVAL( taxRate3_Picklist__c , &quot;20%&quot;),
0.20 * Predicted_Pension__c,
if(
ISPICKVAL( taxRate3_Picklist__c , &quot;25%&quot;),
0.25 * Predicted_Pension__c,


0
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenTaxFormula3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>