force-app/main/default/objects/Lead/fields/hiddenTaxFormula_IRA_Tax__c.field-meta.xml
<CustomField>
    <fullName>hiddenTaxFormula_IRA_Tax__c</fullName>
    <formula>if(

ISPICKVAL( taxRate5_Picklist__c , &quot;10%&quot;),
0.10 * hiddenTaxFormula_IRA__c,
    
if(
ISPICKVAL( taxRate5_Picklist__c , &quot;12%&quot;),
0.12 * hiddenTaxFormula_IRA__c,

if(
ISPICKVAL( taxRate5_Picklist__c , &quot;15%&quot;),
0.15 * hiddenTaxFormula_IRA__c,

if(
ISPICKVAL( taxRate5_Picklist__c , &quot;20%&quot;),
0.20 * hiddenTaxFormula_IRA__c,

if(
ISPICKVAL( taxRate5_Picklist__c , &quot;25%&quot;),
0.25 * hiddenTaxFormula_IRA__c,


0

)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenTaxFormula_IRA_Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>