force-app/main/default/objects/Lead/fields/hiddenTaxFormula_IRAFree__c.field-meta.xml
<CustomField>
    <fullName>hiddenTaxFormula_IRAFree__c</fullName>
    <formula>if(
ISPICKVAL( AnnualWithdraw2__c, &quot;01%&quot;),
(0.01 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;02%&quot;),
(0.02 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;03%&quot;),
(0.03 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;04%&quot;),
(0.04 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;05%&quot;),
(0.05 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;06%&quot;),
(0.06 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;07%&quot;),
(0.07 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;08%&quot;),
(0.08 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;09%&quot;),
(0.09 * X401K_TaxFree__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;10%&quot;),
(0.10 * X401K_TaxFree__c) / 12,

0
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenTaxFormula_IRAFree</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>