force-app/main/default/objects/Lead/fields/hiddentaxformula_ROTHTSP__c.field-meta.xml
<CustomField>
    <fullName>hiddentaxformula_ROTHTSP__c</fullName>
    <formula>if(
ISPICKVAL( AnnualWithdraw2__c, &quot;01%&quot;),
(0.01 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;02%&quot;),
(0.02 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;03%&quot;),
(0.03 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;04%&quot;),
(0.04 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;05%&quot;),
(0.05 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;06%&quot;),
(0.06 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;07%&quot;),
(0.07 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;08%&quot;),
(0.08 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;09%&quot;),
(0.09 * ROTH_Contributions__c) / 12,

if(
ISPICKVAL( AnnualWithdraw2__c, &quot;10%&quot;),
(0.10 * ROTH_Contributions__c) / 12,

0
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddentaxformula_ROTHTSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>