force-app/main/default/objects/Lead/fields/hiddentaxFormula_TSP__c.field-meta.xml
<CustomField>
    <fullName>hiddentaxFormula_TSP__c</fullName>
    <formula>if(
ISPICKVAL( AnnualWithdraw1__c, &quot;01%&quot;),
(0.01 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;02%&quot;),
(0.02 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;03%&quot;),
(0.03 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;04%&quot;),
(0.04 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;05%&quot;),
(0.05 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;06%&quot;),
(0.06 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;07%&quot;),
(0.07 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;08%&quot;),
(0.08 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;09%&quot;),
(0.09 * TSP_Balance_No_Match__c) / 12,

if(
ISPICKVAL( AnnualWithdraw1__c, &quot;10%&quot;),
(0.10 * TSP_Balance_No_Match__c) / 12,

0
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddentaxFormula_TSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>