force-app/main/default/objects/Lead/fields/hiddenTotalBenefitformula__c.field-meta.xml
<CustomField>
    <fullName>hiddenTotalBenefitformula__c</fullName>
    <formula>formula_basePay__c + hiddenExtraBenefitformula__c + 2000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenTotalBenefitformula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>