force-app/main/default/objects/Lead/fields/High_3_Salary__c.field-meta.xml
<CustomField>
    <fullName>High_3_Salary__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>High-3 Salary</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>