force-app/main/default/objects/Lead/fields/How_Did_You_Hear__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear__c</fullName>
    <label>How Did You Hear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Union/Association</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Co-Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>