force-app/main/default/objects/Lead/fields/Investment_Risk_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Investment_Risk_Question_2__c</fullName>
    <label>Investment Risk - Question 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Investment_Risk_Question_2</valueSetName>
    </valueSet>
</CustomField>