force-app/main/default/objects/Lead/fields/IRA_401_k__c.field-meta.xml
<CustomField>
    <fullName>IRA_401_k__c</fullName>
    <formula>(hiddenTaxFormula_IRA__c -  hiddenTaxFormula_IRA_Tax__c) + hiddenTaxFormula_IRAFree__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRA / 401(k)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>