force-app/main/default/objects/Lead/fields/LeadPhone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>LeadPhone_Formatted__c</fullName>
    <formula>IF( CONTAINS( Phone, &quot;)&quot;),

Phone,

IF( ISBLANK( Phone ),

Phone,

&quot;(&quot; &amp; LEFT(Phone, 3) &amp; &quot;) &quot; &amp; MID(Phone, 4, 3) &amp; &quot;-&quot; &amp; RIGHT(Phone, 4)

))</formula>
    <label>LeadPhone_Formatted</label>
    <type>Text</type>
</CustomField>