force-app/main/default/objects/Lead/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max</label>
    <type>Checkbox</type>
</CustomField>