force-app/main/default/objects/Lead/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Min</label>
    <type>Checkbox</type>
</CustomField>