force-app/main/default/objects/Lead/fields/MobilePhone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_Formatted__c</fullName>
    <formula>IF( CONTAINS( MobilePhone, &quot;)&quot;), 

MobilePhone, 

IF( ISBLANK( MobilePhone ),

MobilePhone,

&quot;(&quot; &amp; LEFT(MobilePhone, 3) &amp; &quot;) &quot; &amp; MID(MobilePhone, 4, 3) &amp; &quot;-&quot; &amp; RIGHT(MobilePhone, 4)

))</formula>
    <label>MobilePhone_Formatted</label>
    <type>Text</type>
</CustomField>