force-app/main/default/objects/Lead/fields/Monthly_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contribution__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Monthly Contribution ($)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>