force-app/main/default/objects/Lead/fields/No_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>No_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Opportunity</label>
    <type>Checkbox</type>
</CustomField>